# melody

./: 404.html  README.md  index.html  mkdocs.yml  oauth.toml  pyproject.toml
melody/: config.py  db.py  db_base.py  deps.py  oauth2_providers.py  service.py
melody/identity/: api.py  crud.py  exception.py  models.py  rest.py  tables.py
melody/user/: crud.py  models.py  rest.py  service.py  tables.py
melody_users/: __init__.py  common.py  model.py  oauth2_client.py  service.py  settings.py  tables.py
melody_users/oauth/: __init__.py  service.py  tables.py
tests/: __init__.py  test_oauth2_client.py
