[tool.poetry]
name = "melody"
version = "0.1.0"
description = "A collection of business modules for web applications, in Python"
authors = ["luozhouyang <zhouyang.luo@gmail.com>"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
