[tool.poetry]
name = "melody-users"
version = "0.1.0"
description = "A collection of business modules for web applications, in Python"
authors = ["luozhouyang <zhouyang.luo@gmail.com>"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
sqlmodel = "^0.0.14"
furl = "^2.1.3"
authlib = "^1.3.0"
alembic = "^1.13.1"
dynaconf = "^3.2.4"
pydantic-settings = "^2.2.1"
bcrypt = "^4.1.2"
databases = {extras = ["asyncpg"], version = "^0.9.0"}
fastapi = "^0.110.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ipykernel = "^6.29.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.4"

[tool.pytest]
addopts = "--cov=src --verbose"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
